add argument passing to makefile
This will let you add debug flags or whatever else needs to be added
without having to change 3 lines of the makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,18 @@
 OBJS := main.o admin.o conference.o equipment.o guest.o room.o presentation.o session.o \
         tech.o
+ARGS := -std=c++0x
 
 # link
 all: $(OBJS)
-	g++ $(OBJS) -o uccs
+	g++ $(ARGS) $(OBJS) -o uccs
 
 # pull in dependency info for *existing* .o files
 -include $(OBJS:.o=.d)
 
 # compile and generate dependency info
 %.o: %.cpp
-	g++ -c $(CFLAGS) $*.cpp -o $*.o
-	g++ -MM $(CFLAGS) $*.cpp > $*.d
+	g++ $(ARGS) -c $(CFLAGS) $*.cpp -o $*.o
+	g++ $(ARGS) -MM $(CFLAGS) $*.cpp > $*.d
 
 # remove compilation products
 clean:
